[package]
name = "gitremote"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "tool for opening the current git repository from a local git directory"
readme = "README.md"
homepage = "https://github.com/Niraj-Fonseka/gitremote"
repository = "https://github.com/Niraj-Fonseka/gitremote"
keywords = ["cli", "web", "git"]
categories = ["command-line-utilities"]


[dependencies]
open = "3.2.0"
